fixed overlay size bug on mobile

--- a/themes/tartan/static/css/main.css
+++ b/themes/tartan/static/css/main.css
@@ -207,7 +207,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 200%;
   z-index: 1;
 }
 
